tests/baselines/reference/classWithOverloadImplementationOfWrongName.errors.txt
==== tests/cases/compiler/classWithOverloadImplementationOfWrongName.ts (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        bar(x): any { }
        ~~~
!!! classWithOverloadImplementationOfWrongName.ts(4,5): error TS2239: Function overload name must be 'foo'.
    }